--- a/tab/tab.css
+++ b/tab/tab.css
@@ -22,16 +22,39 @@ a{
 
 .c-tab .c-tabs__list {
     height: 40px;
+    position: relative;
+}
+
+.c-tab .c-tabs__list:before {
+    content: '';
+    width: 100%;
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+
+    border-bottom: 2px solid #ddd;
 }
 
 .c-tab .c-tabs__tab {
     height: 40px;
     float: left;
-    padding: 0 15px;
 
     line-height: 40px;
     text-align: center;
     cursor: pointer;
+}
+
+.c-tab .c-tabs__tab .is-active {
+    border-bottom: 2px solid red;
+}
+
+.c-tab .c-tabs__button {
+    display: block;
+    padding: 0 15px;
 }
 
 .c-tab .c-tabs__more {
@@ -43,5 +66,7 @@ a{
 
 .c-tab .c-tabs__panel {
     height: 300px;
-    background: #eee;
+    display: none;
+
+    background: #f9f9f9;
 }
